<resources>
    <string name="app_name">ILBSYS</string>
    <string name="server_selection">Server selection</string>
    <string name="statistics">Statistics</string>
    <string name="all_stats">See all stats</string>
    <string name="good_software">Get support at GOODANDPR0SOFTWARE.RU</string>
    <string name="server_name">Server name</string>
    <string name="server_address">Server address</string>
    <string name="add_server">Add server</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ram_usage">RAM usage</string>
    <string name="cpu_usage">CPU usage</string>
    <string name="uptime">Uptime</string>
    <string name="days">day/s</string>
    <string name="hours">hour/s</string>
    <string name="delete_server">Delete server</string>
    <string name="edit_server">Edit server</string>
    <string name="cpu_temp_graph">CPU temperature</string>
    <string name="ram_usage_graph">RAM usage</string>
</resources>
