<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:text="@string/good_software"
        android:textColor="#F40000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_server_selection"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="selectServerClick"
        android:text="@string/server_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_statistics"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/statistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_server_selection" />

    <Button
        android:id="@+id/bt_edit_server"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_statistics" />

    <Button
        android:id="@+id/bt_delete_server"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/delete_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_add_server" />

    <Button
        android:id="@+id/bt_add_server"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>